RP-100 Table no longer shifting on hover

--- a/src/app/components/snomed-query-modal/snomed-query-modal.component.scss
+++ b/src/app/components/snomed-query-modal/snomed-query-modal.component.scss
@@ -27,7 +27,7 @@ div.modal-content {
             }
         }
 
-        select#templateSelect {
+        select {
             font-size: 1.4rem;
             font-weight: 300;
         }
