--- a/src/app/pages/reporting/reporting.component.scss
+++ b/src/app/pages/reporting/reporting.component.scss
@@ -52,13 +52,15 @@ div#reporting {
                     }
 
                     tr {
-                        position: relative;
-
                         &:hover {
                             background-color: $gallery-white;
 
-                            > button.delete-button {
-                                display: block;
+                            td {
+                                position: relative;
+
+                                > button.delete-button {
+                                    display: block;
+                                }
                             }
                         }
                     }
@@ -85,48 +87,90 @@ div#reporting {
                                 color: $pomegranate-red;
                             }
                         }
+
+                        button.delete-button {
+                            display: none;
+                            position: absolute;
+                            top: 0;
+                            right: -50px;
+                            //opacity: 0;
+                            background-color: transparent;
+                            color: $crimson-red;
+                            -webkit-animation: delete-move 200ms;
+                            -webkit-animation-delay: 500ms;
+                            -webkit-animation-fill-mode: forwards;
+                            animation: delete-move 200ms;
+                            animation-delay: 500ms;
+                            animation-fill-mode: forwards;
+
+                            @-webkit-keyframes delete-move {
+                                from {
+                                    right: -50px;
+                                    opacity: 0;
+                                }
+                                to {
+                                    right: 0;
+                                    opacity: 1;
+                                }
+                            }
+
+                            @keyframes delete-move {
+                                from {
+                                    right: -50px;
+                                    opacity: 0;
+                                }
+                                to {
+                                    right: 0;
+                                    opacity: 1;
+                                }
+                            }
+
+                            &:hover {
+                                color: $pomegranate-red;
+                            }
+                        }
                     }
 
-                    button.delete-button {
-                        display: none;
-                        position: absolute;
-                        right: -50px;
-                        //opacity: 0;
-                        background-color: transparent;
-                        color: $crimson-red;
-                        -webkit-animation: delete-move 200ms;
-                        -webkit-animation-delay: 500ms;
-                        -webkit-animation-fill-mode: forwards;
-                        animation: delete-move 200ms;
-                        animation-delay: 500ms;
-                        animation-fill-mode: forwards;
-
-                        @-webkit-keyframes delete-move {
-                            from {
-                                right: -50px;
-                                opacity: 0;
-                            }
-                            to {
-                                right: 0;
-                                opacity: 1;
-                            }
-                        }
-
-                        @keyframes delete-move {
-                            from {
-                                right: -50px;
-                                opacity: 0;
-                            }
-                            to {
-                                right: 0;
-                                opacity: 1;
-                            }
-                        }
-
-                        &:hover {
-                            color: $pomegranate-red;
-                        }
-                    }
+                    //button.delete-button {
+                    //    display: none;
+                    //    position: absolute;
+                    //    right: -50px;
+                    //    //opacity: 0;
+                    //    background-color: transparent;
+                    //    color: $crimson-red;
+                    //    -webkit-animation: delete-move 200ms;
+                    //    -webkit-animation-delay: 500ms;
+                    //    -webkit-animation-fill-mode: forwards;
+                    //    animation: delete-move 200ms;
+                    //    animation-delay: 500ms;
+                    //    animation-fill-mode: forwards;
+                    //
+                    //    @-webkit-keyframes delete-move {
+                    //        from {
+                    //            right: -50px;
+                    //            opacity: 0;
+                    //        }
+                    //        to {
+                    //            right: 0;
+                    //            opacity: 1;
+                    //        }
+                    //    }
+                    //
+                    //    @keyframes delete-move {
+                    //        from {
+                    //            right: -50px;
+                    //            opacity: 0;
+                    //        }
+                    //        to {
+                    //            right: 0;
+                    //            opacity: 1;
+                    //        }
+                    //    }
+                    //
+                    //    &:hover {
+                    //        color: $pomegranate-red;
+                    //    }
+                    //}
                 }
 
                 div.last-item {
